# Indaleko

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  ABLATION_FIXES.md  ABLATION_INTEGRATION_TODO.md  ABLATION_QUERY_DESIGN.md  ABLATION_TODO.md  CLAUDE.md  CLAUDE_updated.md  CLI-TODO.md  CROSS_COLLECTION_ENHANCEMENT_PLAN.md  CROSS_COLLECTION_ENHANCEMENT_PLAN_REVISED.md  DEVELOPMENT_JOURNAL.md  IADPLocation.py  IADPLocation2.py  IADPLocationData.py  IADPLocationRegistration.py  IADPNetworkUtilities.py  IMPLEMENTATION_SUMMARY.md  Indaleko-GUI.cmd  Indaleko.py  IndalekoAISearch.py  IndalekoActivityContext.py  IndalekoActivityContextDataModel.py  IndalekoActivityContextSchema.py  IndalekoActivityData.py  IndalekoActivityDataModel.py  IndalekoActivityDataProvider.py  IndalekoActivityDataProviderDataModel.py  IndalekoActivityDataProviderRegistration.py  IndalekoActivityDataProviderRegistrationDataModel.py  IndalekoActivityDataProviderRegistrationSchema.py  IndalekoActivityDataProviderSchema.py  IndalekoActivityDataSchema.py  IndalekoActivityProviderRegistration.py  IndalekoActivityProviderRegistrationSchema.py  IndalekoActivityProviderSchema.py  IndalekoActivityRegistration.py  IndalekoActivityRegistrationSchema.py  (+246 more)
activity/: README.md  __init__.py  __main__.py  activity_data_semantic_attributes.py  activity_metadata.py  characteristics.py  discover.py  provider_base.py  provider_characteristics.py  provider_discover.py  provider_registration.py  provider_registration_service.py  provider_semantic_attributes.py  recording.py  registration.py  registration_service.py  semantic_attributes.py
apollo/: .gitignore  index.js
archivist/: README.md  cli_integration.py  cli_integration_main.py  database_optimizer.py  entity_equivalence.py  fire_circle_integration.py  kb_cli_integration.py  kb_integration.py  knowledge_base_implementation_summary.md  knowledge_base_updating_plan.md  request_assistant.py  request_cli.py  test_continuous_learning.py  test_entity_equivalence.py  test_fire_circle.py  test_knowledge_base.py  test_optimizer.py  test_request_assistant.py
constants/: __init__.py  values.py
data/: 2023-06-07 Windows PowerShell.txt
data_generator/: .gitignore  0_translate_query.py  1_metadata_generator.py  2_store_test_Indaleko.py  README.md  file_contents.py  main_pipeline.py  main_pipeline_cli.py  main_pipeline_cli_original.py  mapping.py  s0_create_machine_config.py  s0_run_metadata_generator.py  s1_metadata_generator.py  s2_store_test_Indaleko.py  s3_translate_query.py  s4_get_precision_and_recall.py  s5_log_result.py  s6_create_machine_config.py  s6_test.py  s6_test_dg_functionality.py  workflow.md
data_models/: __init__.py  activity_data_provider_registration.py  activity_data_registration.py  base.py  collection_info.py  collection_metadata_data_model.py  collector.py  command_line_data_model.py  db_config.py  db_index.py  db_statistics.py  db_view.py  i_object.py  i_perf.py  i_uuid.py  identity_domain.py  indaleko_record_data_model.py  indaleko_semantic_attribute_data_model.py  indaleko_source_identifier_data_model.py  indaleko_timestamp_data_model.py  indaleko_uuid_data_model.py  location_data_model.py  machine_config.py  named_entity.py  provenance_data.py  provenance_operations.py  query_history.py  record.py  relationship.py  semantic_attribute.py  service.py  service_identifier.py  source_identifer.py  source_identifier.py  storage_semantic_attributes.py  timestamp.py  user_identity.py
db/: README_ANALYZERS.md  __init__.py  analyzer_manager.py  analyzer_manager_cli.py  collection.py  collection_index.py  collection_metatadata_editor.py  collection_view.py  create_analyzers.js  create_analyzers.sh  create_test_view.js  db_collection_metadata.py  db_collections.py  db_config.py  db_config_generator.py  db_docker.py  db_info.py  db_setup.py  fix_views.py  i_collections.py  index_notes.md  profile_view_performance.py  prompt_management_setup.py  service_manager.py  test_analyzer.js  test_analyzer.py  test_optimized_views.py  test_query_performance.py  test_views.py  upload_data_model.py  uploader.py
deprecated/: IndalekoAISearch.py  IndalekoDataManager.py  IndalekoDataModel.py  IndalekoDataSchema.py  IndalekoMachineConfigSchema.py  IndalekoObject.py  IndalekoObjectDataModel.py  IndalekoObjectSchema.py  IndalekoQuery.py  IndalekoRecordDataModel.py  IndalekoRecordSchema.py  IndalekoRelationship.py  IndalekoRelationshipContained.py  IndalekoRelationshipContains.py  IndalekoRelationshipDataModel.py  IndalekoRelationshipSchema.py  IndalekoSchema.py  IndalekoSchemaMapping.py  IndalekoSearch.py  IndalekoService.py  IndalekoServiceDataModel.py  IndalekoServiceManager.py  IndalekoServiceSchema.py  IndalekoSourceDataModel.py  IndalekoSourceSchema.py  IndalekoUser.py  IndalekoUserDataModel.py  IndalekoUserRelationshipDataModel.py  IndalekoUserRelationshipSchema.py  IndalekoUserSchema.py
doc/: AblationDesign.md  ArangoSearchViews.md  CrossSourcePatterns.md  PROMPT_GUARDIAN_EXTRACTION_DESIGN.md  PROMPT_MANAGEMENT_DESIGN_REVISED.md  ProactiveArchivist.md  PromptManagementAPI.md  PromptManagementArchitecture.md  PromptManagementExamples.md  PromptManagementSystem.md  PromptManagementViews.md  RegistrationServices.md  SampleData.md  WindowsWalkThrough.md
exemplar/: QBASE_DESIGN.md  exemplar_data_model.py  location_documents.py  mime_types.py  ner_documents.py  pick_files.py  q1.py  q1a.py  q2.py  q2_refactored.py  q3.py  q4.py  q5.py  q6.py  qbase.py  query_test_runner.py  reference_date.py  test_structured_output.py  thesis_results_model.py
figures/: indaleko-arch.ai  query-interface.ai
fileaudit/: abstract.py  log_compactor_v2.py  log_compactor_v2_test.py  logcompator.py  logcompator_test.py  mac.py  operators.py  (+3 more)
(+1463 files in other folders)
