[build-system]
requires = ["setuptools>=68.2.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indaleko"
version = "0.1.1"
description = "Indaleko is a Python package for implementing a Unified Personal Index system."
authors = [{name = "Tony Mason", email = "fsgeek@gatech.edu"}]
dependencies = [
    "apischema==0.18.1",
    "discord.py==2.5.2",
    "docker==7.1.0",
    "dropbox==12.0.2",
    "Faker==37.0.2",
    "Flask==3.1.0",
    "geopy==2.4.1",
    "gitpython==3.1.44",
    "google_api_python_client==2.165.0",
    "google_auth_oauthlib==1.2.1",
    "icecream==2.1.4",
    "jsonlines==4.0.0",
    "jsonschema==4.23.0",
    "keyring==25.6.0",
    "msal==1.32.0",
    "msgpack_python==0.5.6",
    "openai==1.68.2",
    "psutil==7.0.0",
    "pydantic==1.10.21",
    "pyicloud==1.0.0",
    "pyngrok==7.2.3",
    "python-arango==8.1.6",
    "Requests==2.32.3",
    "graphql-core==3.2.6",
    "pydantic-core==2.32.0",
    "pytile==2024.12.0",
    "spotipy==2.25.0",
    "pyecobee==1.3.11",
    "winsdk==1.0.0b10 ; platform_system == 'Windows'",
]
requires-python = ">=3.12"

[project.optional-dependencies]
test = ["pytest>=6.0"]
dev = ["black", "flake8"]
windows = ['winsdk==1.0.0b10']

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pylint]
init-hook = "import sys; sys.path.insert(0, '${workspaceFolder}')"
