[build-system]
requires = ["setuptools>=68.2.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indaleko"
version = "0.1.1"
description = "Indaleko is a Python package for implementing a Unified Personal Index system."
authors = [{name = "Tony Mason", email = "fsgeek@gatech.edu"}]
dependencies = [
    "apischema==0.18.1",
    "discord.py==2.5.2",
    "docker==7.1.0",
    "dotenv==0.9.9",
    "dropbox==12.0.2",
    "Faker==37.0.2",
    "Flask==3.1.0",
    "geopy==2.4.1",
    "gitpython==3.1.44",
    "google_api_python_client==2.165.0",
    "google_auth_oauthlib==1.2.1",
    "icecream==2.1.4",
    "pyyaml>=6.0",
    "jsonlines==4.0.0",
    "jsonschema==4.23.0",
    "keyring==25.6.0",
    "msal==1.32.0",
    "msgpack_python==0.5.6",
    "openai==1.68.2",
    "psutil==7.0.0",
    "pydantic==2.10.6",
    "pyicloud==1.0.0",
    "pyngrok==7.2.3",
    "python-arango==8.1.6",
    "Requests==2.32.3",
    "graphql-core==3.2.6",
    "pydantic-core==2.27.2",
    "pytile==2024.12.0",
    "spotipy==2.25.0",
    "pyecobee==1.3.11",
    "tiktoken==0.9.0",
    "regex==2024.5.15",
    "winsdk==1.0.0b10 ; platform_system == 'Windows'",
    "win32more==0.5.10 ; platform_system == 'Windows'",
    "pillow>=10.2.0",
    "exifread>=3.0.0",
    "colorama>=0.4.6",
    "tqdm>=4.66.0",
    "python-magic>=0.4.27",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pytest>=6.0",
    "lazy_import>=0.2.2",
    "ruff>=0.6.9",
    "graphviz>=0.20.1",
    "pyreadline3>=3.5.4",
    "pyreadline3>=3.5.4",
    "openai-agents-mcp>=0.0.8",
    "seaborn>=0.13.2",
    "anthropic>=0.51.0",
    "google-genai>=1.14.0",
]

requires-python = ">=3.12"
[tool.setuptools.packages.find]
where = ["src"]
include = ["indaleko*"]

[project.optional-dependencies]
test = ["pytest>=6.0"]
dev = ["black", "flake8", "pre-commit"]
windows = ['winsdk==1.0.0b10']
gui = ["streamlit>=1.38.0", "plotly>=5.22.0", "pydeck>=0.8.0"]

[tool.setuptools]
py-modules = []  # No Python modules to package

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 120
# Target Python 3.12 for grammar support in Black
target-version = ['py312']

[tool.pylint]
init-hook = "import sys; sys.path.insert(0, '${workspaceFolder}')"

[tool.ruff]
# Select specific linting rules to reduce noise
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
]
# Ignore overly verbose rules
ignore = [
    "E501",  # Line too long
]
# Formatting settings
line-length = 120
